Make recompiler tests more stable